--- a/doc_MISR_AGP.html
+++ b/doc_MISR_AGP.html
@@ -7,6 +7,21 @@
    </head>
 <body>
 <h1>Documentation for the IDL routines in project MISR_AGP</h1>
+<ul>
+<li><p><strong>Intellectual property rights</strong></p>
+<ul>
+<li><p>Copyright (C) 2017-2020 Michel M. Verstraete.</p>
+<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following three conditions:</p>
+<p>1. The above copyright notice and this permission notice shall be included in their entirety in all copies or substantial portions of the Software.</p>
+<p>2. THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+<p>See: <a href="https://opensource.org/licenses/MIT" class="uri">https://opensource.org/licenses/MIT</a>.</p>
+<p>3. The current version of this Software is freely available from</p>
+<p><a href="https://github.com/mmverstraete" class="uri">https://github.com/mmverstraete</a>.</p></li>
+<li><p>Feedback</p>
+<p>Please send comments and suggestions to the author at<br />
+<a href="mailto:MMVerstraete@gmail.com">MMVerstraete@gmail.com</a></p></li>
+</ul></li>
+</ul>
 <h2>find_agp_file</h2>
 <ul>
 <li><p><strong>Purpose:</strong> This function provides the file specification (path + name) of the single <span class="smallcaps">MISR</span> <span class="smallcaps">AGP</span> file corresponding to the given <code>misr_path</code> and optional <code>agp_version</code>, if it is available either in the default folder (defined by the function <code>set_roots_vers.pro</code>), or in the folder specified by the optional input keyword parameter <code>agp_folder</code>.</p></li>
